--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "dark-sky-api",
-  "version": "0.0.32",
-  "description": "A simple dark sky api wrapper for client side js supporting use of proxy and using method chaining and promises",
+  "name": "dark-sky-skeleton",
+  "version": "0.1.1",
+  "description": "barebones dark sky weather api for client side js - supports api key and proxy urls",
   "main": "index.js",
   "scripts": {
-    "build": "babel ./src/dark-sky-api.js --out-file ./dist/dark-sky-api.js"
+    "build": "babel ./src/dark-sky-skeleton.js --out-file ./dist/dark-sky-skeleton.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/deanbot/dark-sky-api.git"
+    "url": "git+https://github.com/deanbot/dark-sky-skeleton.git"
   },
   "keywords": [
     "dark",
@@ -23,18 +23,15 @@
   "author": "Dean Verleger",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/deanbot/dark-sky-api/issues"
+    "url": "https://github.com/deanbot/dark-sky-skeleton/issues"
   },
-  "homepage": "https://github.com/deanbot/dark-sky-api#readme",
+  "homepage": "https://github.com/deanbot/dark-sky-skeleton#readme",
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-preset-env": "^1.3.2",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "babel-preset-env": "^1.3.2"
   },
   "dependencies": {
     "fetch-jsonp": "^1.0.6",
-    "moment": "^2.18.1",
     "query-string": "^4.3.2",
     "whatwg-fetch": "^2.0.3"
   }
