--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,18 @@
 {
   "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "browsers": [
-            "last 2 versions",
-            "safari >= 7"
-          ]
-        }
-      }
-    ]
-  ]
+    "stage-1"
+  ],
+  "env": {
+    "targets": {
+      "browsers": [
+        "last 2 versions",
+        "safari >= 7"
+      ]
+    },
+    "test": {
+      "presets": [
+        "latest"
+      ]
+    }
+  }
 }
