--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "dark-sky-skeleton",
-  "version": "0.1.2",
+  "version": "0.1.22",
   "description": "barebones dark sky weather api for client side js - supports api key and proxy urls",
   "main": "index.js",
   "scripts": {
-    "build": "babel ./src/dark-sky-skeleton.js --out-file ./dist/dark-sky-skeleton.js"
+    "build": "babel ./src/dark-sky-skeleton.js --out-file ./dist/dark-sky-skeleton.js",
+    "test": "jest",
+    "test:watch": "yarn run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,9 @@
   "homepage": "https://github.com/deanbot/dark-sky-skeleton#readme",
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-preset-env": "^1.3.2"
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1"
   },
   "dependencies": {
     "fetch-jsonp": "^1.0.6",
