change babel-preset to avoid 'unexpected token import' error

--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,5 @@
 {
   "presets": [
-    "stage-1"
-  ],
-  "env": {
-    "targets": {
-      "browsers": [
-        "last 2 versions",
-        "safari >= 7"
-      ]
-    },
-    "test": {
-      "presets": [
-        "latest"
-      ]
-    }
-  }
+    "env"
+  ]
 }
