--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dark-sky-skeleton",
-  "version": "0.1.22",
+  "version": "0.1.3",
   "description": "barebones dark sky weather api for client side js - supports api key and proxy urls",
   "main": "index.js",
   "scripts": {
@@ -30,9 +30,7 @@
   "homepage": "https://github.com/deanbot/dark-sky-skeleton#readme",
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1"
+    "babel-preset-env": "^1.3.2"
   },
   "dependencies": {
     "fetch-jsonp": "^1.0.6",
